update for iphones

--- a/index.css
+++ b/index.css
@@ -914,11 +914,8 @@ footer > p{
     }
 }
 
-@media screen and (max-width: 900px) {
-    .heropart-2{
-        display: none;
-    }
-}
+
+
 @media screen and (max-width: 970px){
     #header{
         width: 100%;
@@ -1001,6 +998,30 @@ footer > p{
     }
     footer p{
         margin-left: -40%;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .heropart-2{
+        display: none;
+    }
+    .search-companies label{
+        width: 100%;
+    }
+    .search-companies label input[type="text"]{
+        width: 300px;
+        margin-left: -5%;
+        margin-bottom: 20px;
+    }
+    .search-companies label button{
+        display: block;
+        position: inherit;
+        margin-left: 8%;
+        top: 0;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        width: 300px;
     }
 }
 
